--- a/package.json
+++ b/package.json
@@ -1,41 +1,24 @@
 {
-  "name": "mashedjs",
-  "version": "0.1.24",
-  "description": "NodeJS Bare bones web framework & router",
+  "name": "mashed",
+  "version": "0.0.1-Alpha",
+  "description": "NodeJS bare bones web framework & router",
   "main": "index.js",
   "dependencies": {
-    "content-disposition": "^0.5.2",
-    "content-type": "^1.0.4",
-    "send": "^0.16.1",
-    "etag": "^1.8.1",
-    "proxy-addr": "^2.0.2",
-    "qs": "^6.5.1",
-    "querystring": "^0.2.0",
-    "encodeurl": "^1.0.1",
-    "escape-html": "^1.0.3",
-    "on-finished": "^2.3.0",
-    "statuses": "^1.4.0",
-    "utils-merge": "^1.0.1",
-    "cookie-signature": "^1.0.6",
-    "cookie": "^0.3.1",
-    "vary": "^1.1.2",
-    "url": "^0.11.0",
-    "range-parser": "^1.2.0",
-    "accepts": "^1.3.4",
-    "type-is": "^1.6.15",
-    "events": "^1.1.1",
-    "merge-descriptors": "^1.0.1",
-    "unpipe": "^1.0.0",
-    "setprototypeof": "^1.1.0",
-    "methods": "^1.1.2",
-    "path-to-regexp": "^2.1.0"
+    "mime-types": "2.1.x",
+    "accepts": "1.3.x",
+    "merge-descriptors": "1.0.x",
+    "statuses": "1.4.x",
+    "setprototypeof": "1.1.x",
+    "utils-merge": "1.0.x",
+    "methods": "1.1.x",
+    "path-to-regexp": "^2.1.x",
+    "colors": "1.1.x",
+    "bluebird": "3.5.x",
+    "stexengine": "0.1.x",
+    "qs": "6.5.x"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/mashyindustries/mashedjs.git"
   },
   "license": "MIT"
 }
