updated package version

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mashed",
-  "version": "0.0.1-Alpha",
+  "version": "0.0.1-Alpha1",
   "description": "NodeJS Opinionated web framework",
   "main": "index.js",
   "dependencies": {
