--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "methods": "1.1.x",
     "path-to-regexp": "^2.1.x",
     "colors": "1.1.x",
-    "stexengine": "0.1.x",
+    "stexengine": "0.1.1",
     "caller": "1.0.1",
     "qs": "6.5.x"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test/test.js"
   },
   "license": "MIT"
 }
