--- a/package.json
+++ b/package.json
@@ -4,18 +4,19 @@
   "description": "Fast, opinionated, minimalist web framework for NodeJS",
   "main": "index.js",
   "dependencies": {
-    "mime-types": "2.1.x",
     "accepts": "1.3.x",
-    "merge-descriptors": "1.0.x",
-    "statuses": "1.4.x",
-    "setprototypeof": "1.1.x",
-    "utils-merge": "1.0.x",
-    "methods": "1.1.x",
-    "path-to-regexp": "^2.1.x",
-    "colors": "1.1.x",
-    "stexengine": "0.1.8",
     "caller": "1.0.1",
-    "qs": "6.5.x"
+    "colors": "1.1.x",
+    "cookie-parser": "^1.4.3",
+    "merge-descriptors": "1.0.x",
+    "methods": "1.1.x",
+    "mime-types": "2.1.x",
+    "path-to-regexp": "^2.1.x",
+    "qs": "6.5.x",
+    "setprototypeof": "1.1.x",
+    "statuses": "1.4.x",
+    "stexengine": "0.1.8",
+    "utils-merge": "1.0.x"
   },
   "scripts": {
     "test": "node test/test.js"
