--- a/package.json
+++ b/package.json
@@ -1,25 +1,34 @@
 {
   "name": "slashed",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Fast, opinionated, minimalist web framework for NodeJS",
   "main": "index.js",
   "dependencies": {
     "accepts": "1.3.x",
-    "caller": "1.0.1",
-    "colors": "1.1.x",
-    "cookie-parser": "^1.4.3",
-    "merge-descriptors": "1.0.x",
     "methods": "1.1.x",
-    "mime-types": "2.1.x",
     "path-to-regexp": "^2.1.x",
     "qs": "6.5.x",
-    "setprototypeof": "1.1.x",
-    "statuses": "1.4.x",
-    "stexengine": "0.1.8",
-    "ws": "2.0.x",
-    "cookie": "0.3.x",
-    "cookie-signature": "1.1.x",
-    "utils-merge": "1.0.x"
+    "statuses": "^1.5.0",
+    "cache-content-type": "^1.0.0",
+    "content-disposition": "~0.5.2",
+    "content-type": "^1.0.4",
+    "cookies": "~0.7.1",
+    "delegates": "^1.0.0",
+    "destroy": "^1.0.4",
+    "error-inject": "^1.0.0",
+    "escape-html": "^1.0.3",
+    "fresh": "~0.5.2",
+    "http-assert": "^1.3.0",
+    "http-errors": "^1.6.3",
+    "koa-is-json": "^1.0.0",
+    "on-finished": "^2.3.0",
+    "only": "~0.0.2",
+    "parseurl": "^1.3.2",
+    "type-is": "^1.6.16",
+    "vary": "^1.1.2",
+    "urijs": "~1.19.1",
+    "koa-compress": "3.0.x",
+    "koa-compose": "4.1.x"
   },
   "scripts": {
     "test": "node test/test.js"
